--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,35 @@
-sudo: false
-language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-matrix:
-  include:
-    - { python: 3.6, env: TOXENV=flake8 }
-    - { python: 3.6, env: TOXENV=isort }
-    # Py37 requires xenial distrubution and sudo
-    # See travis-ci/travis-ci#9069
-    - { python: 3.7, dist: xenial, sudo: true }
+name: Python package
 
-install:
-  - pip install tox-travis
-  - pip install coveralls
-script: tox
-after_success: if [ -e .coverage ]; then coveralls; fi
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.5, 3.6, 3.7, 3.8]
+        include:
+          - { python: 3.6, env: TOXENV=flake8 }
+          - { python: 3.6, env: TOXENV=isort }
+          - { python: 3.7, dist: xenial, sudo: true }
+        
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        - pip install tox-travis
+        - pip install coveralls
+    - name: Lint with flake8
+      run: |
+        script: tox
+        after_success: if [ -e .coverage ]; then coveralls; fi
+        
