--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,27 +8,21 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 4
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
-        include:
-          - { python: 3.6, env: TOXENV=flake8 }
-          - { python: 3.6, env: TOXENV=isort }
-          - { python: 3.7, dist: xenial, sudo: true }
-        
+        python-version: [2.7, 3.6, 3.7, 3.8]
+
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: | 
-        - pip install coveralls
-    - name: Lint with flake8
       run: |
-        script: tox
-        after_success: if [ -e .coverage ]; then coveralls; fi
-        
+        python -m pip install --upgrade pip
+        pip install tox
+    - name: Test with tox
+      run: tox
