--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,12 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
+        include:
+          - { python: 3.6, env: TOXENV=flake8 }
+          - { python: 3.6, env: TOXENV=isort }
+          # Py37 requires xenial distrubution and sudo
+          # See travis-ci/travis-ci#9069
+          - { python: 3.7, dist: xenial, sudo: true }
         python-version: [2.7, 3.5, 3.6, 3.7]
 
     steps:
