--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: python
 python:
     - "2.7"
     - "3.6"
-    - "3.7"
+    # - "3.7"
 matrix:
     include:
         - { python: 3.6, env: TOXENV=flake8 }
         - { python: 3.6, env: TOXENV=isort }
-        - { python: 3.7, dist: xenial, sudo: true }
+        # - { python: 3.7, dist: xenial, sudo: true }
 
 install:
     - pip install tox-travis
